kubernetes_uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-website-uat
spec:
  selector:
    matchLabels:
      app: test-website
  template:
    metadata:
      labels:
        app: test-website
    spec:
      containers:
        - name: test-website-uat
          image: ghcr.io/dbca-wa/testwebsite
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: '64Mi'
              cpu: '10m'
            limits:
              memory: '2048Mi'
              cpu: '1000m'
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmpfs-ram
      volumes:
        - name: tmpfs-ram
          emptyDir:
            medium: 'Memory'
      automountServiceAccountToken: false
      tolerations:
        - key: arch
          operator: Equal
          value: arm64
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: arch
                    operator: In
                    values:
                      - arm64
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: test-website
                topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: test-website-clusterip-uat
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: test-website
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-website-ingress-uat
spec:
  rules:
    - host: public-site-test.dbca.wa.gov.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-website-clusterip-uat
                port:
                  number: 8080
